# petabyte

./: .gitignore  README.md  RLtest.md  RUNBOOK.md  SECURITY.md  deploy.md  update.md
.github/workflows/: tests.yml  (+2 more)
deploy/: canonical-domain.md  lumaris-reaper.service
desktop app/: BUILD.md  README.md  requirements.txt  task_fetcher.py  updater.py
desktop-app/: .env.example  build_exe.py  crypto.py  petabyte_desktop.py  ui.py
docs/: FIXES.md  RLtest.md  SECURITY_ASSESSMENT.md  deploy.md  frontend.md  isolation-roadmap.md  stub.md  vm-rental.md  vm-runbook.md
lumaris_agent/: .env.example  .gitignore  BUILD.md  INSTALL.md  README.md  WINDOWS.md  build_exe.py  install.ps1  install.sh  main.py  provision.py  requirements.txt  setup.py  task_fetcher.py  uninstall.sh  update.sh  vm.py
lumaris_api/: .gitignore  License  adversarial_test.py  auth.py  db.py  main.py  nicehash.py  notifications.py  notify_providers.py  pages.py  payout_providers.py  postgres_test.py  pyproject.toml  quickstart.sh  requirements.txt  router.py  run_tests.sh  smoke_test.py  static_dashboard.py  template.env  templates_registry.py  utils.py
lumaris_api/alembic/versions/: 1ad3c0c94975_update_sellerspec_model.py  effe95d6ce90_update_sellerspec_model.py
lumaris_api/deploy/: AUTO_DEPLOY.md  DEPLOY.md  HARDENING.md  deploy.sh  gunicorn_conf.py  lumaris-api.service  nginx-lumaris.conf  update.sh
lumaris_api/installers/: README.md  manage.ps1
lumaris_api/tools/: payout_worker.py  reaper.py
lumaris_gateway/: gateway.py  tunnel_test.py
petabyte/: README.md
petabyte_out/: LICENSE
(+54 files in other folders)
